correct tutorials in jupyter

--- a/source/Tutorials/2_Cross-samples.ipynb
+++ b/source/Tutorials/2_Cross-samples.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f85eebf-f622-48ae-afde-9183465eeb51",
+   "id": "8d848f74",
    "metadata": {},
    "source": [
-    "## 2_cross-samples  \r\n",
-    "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-sample data. We train XChrom using one sample and then use another sample for model prediction and evaluation, illustrating the model’s performance on data with batch effects.  \r\n",
-    "\r\n",
-    "We use a publicly available dataset of single-cell multiome data collected from bone marrow mononuclear cells (BMMCs) of 12 healthy human donors. The dataset features a nested batch design where some donor samples were measured at multiple sites, while others were measured at a single site. Samples were prepared using a standardized protocol across four sites. The data was subsequently annotated to identify cell types and remove doublets.  \r\n",
-    "\r\n",
-    "- **Data Preprocessing**  \r\n",
-    "As an example, we extract two samples labeled `s1d1` and `s2d1` (where `s` denotes site and `d` denotes donor). In this tutorial, we use `s1d1` as the training set and `s2d1` as the test set. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within-sample` tutorial. For the test scATAC data, we use the entire test set for evaluation.  \r\n",
-    "\r\n",
-    "For the scRNA data, we first perform batch effect removal on both `s1d1` and `s2d1` samples (using Harmony in this example, though other methods such as Scanorama, scVI, or ingest can also be used). The batch-corrected cell embeddings—typically named `'X_pca_harmony'`—are stored in the respective scRNA datasets of both samples and serve as input for model training and prediction.  \r\n",
-    "\r\n",
-    "- **Model Training**  \r\n",
-    "During training, the model takes as input sequences (one-hot encoded, 1 × seq_len) and cell embeddings (a cells × embedding_dimensions array) to predict sequence accessibility across cells. It is important to note that the raw cell embeddings here are derived from batch-corrected scRNA data of both samples.  \r\n",
-    "\r\n",
-    "- **Prediction and Evaluation**  \r\n",
-    "After training, we evaluate the model’s ability to predict chromatin accessibility in the preprocessed test sample. Evaluation is conducted from two perspectives:  \r\n",
-    "  - Using **auROC and auPRC** to assess the accuracy of cross-sample predictions.  \r\n",
-    "  - Using **neighbor score (NS)** and **label score (LS)** to evaluate cross-modality neighborhood consistency and the consistency of cell labels within local neighborhoods in the cross-sample scenario."
+    "## **2. Cross-Sample Analysis**\n",
+    "\n",
+    "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-sample data. We train the XChrom model using one sample and then use another distinct sample for prediction and evaluation, thereby illustrating the model's performance in handling data with inherent batch effects.\n",
+    "\n",
+    "We utilized a publicly available dataset of single-cell multiome data collected from bone marrow mononuclear cells (BMMCs) of 12 healthy human donors. The dataset features a nested batch design where some donor samples were measured at multiple sites while others were measured at a single site. All samples were prepared using a standardized protocol across four different sites. The data was subsequently annotated to identify cell types and remove doublets.\n",
+    "\n",
+    "- **Data Preprocessing**\n",
+    "As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `Within-Sample` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.\n",
+    "\n",
+    "For the scRNA-seq data, we first performed batch effect correction on both `s1d1` and `s2d1` samples using Harmony (though alternative methods such as Scanorama, scVI, or ingest could be employed). The batch-corrected cell embeddings-typically named `'X_pca_harmony'`-were stored in the respective scRNA-seq datasets of both samples and served as input for model training and prediction.\n",
+    "\n",
+    "- **Model Training**\n",
+    "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × sequence length) and ② cell embeddings (cell number × embedding dimension matrix). The model is trained to predict sequence accessibility across cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
+    "\n",
+    "- **Prediction and Evaluation**\n",
+    "Following training, we evaluated the model's capability to predict chromatin accessibility in the preprocessed test sample from two perspectives:\n",
+    "    - **Prediction Accuracy:** Qterisic cun-recll curve (auPRC).\n",
+    "    - **Biological Consistency:** Assessed using the neighbor score (NS) to measure cross-modality neighborhood concordance and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods."
    ]
   },
   {
@@ -29,11 +30,11 @@
    "id": "257eccff-77f6-4260-9177-ce21cb5c3229",
    "metadata": {},
    "source": [
-    "### 1. Download Data (BMMCs: s1d1-s2d1)  \r\n",
-    "- The original data is sourced from [GEO accession GSE194122](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE194122). We extracted samples s1d1 and s2d1 from this dataset and made them available on Zenodo.  \r\n",
-    "- After downloading, save the data as `'./data/2_cross_samples/s1d1_s2d1.h5ad'`.  \r\n",
-    "- Download the human genome file from:  \r\n",
-    "  [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)  \r\n",
+    "### 1. Download Data (BMMCs: s1d1-s2d1)  \n",
+    "- The original data is sourced from [GEO accession GSE194122](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE194122). We extracted samples s1d1 and s2d1 from this dataset and made them available on https://doi.org/10.5281/zenodo.16959682.  \n",
+    "- After downloading, save the data as `'./data/2_cross_samples/s1d1_s2d1.h5ad'`.  \n",
+    "- Download the human genome file from:  \n",
+    "  [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)  \n",
     "  and decompress it."
    ]
   },
@@ -305,7 +306,7 @@
    "id": "ee23a923-0a3c-431d-b46b-5580bff5549d",
    "metadata": {},
    "source": [
-    "### 3. Process scRNA-seq data to generate raw cell embeddings(2 samples batch correction)"
+    "### 3. Process scRNA-seq data to generate raw cell embeddings (2 samples batch correction)"
    ]
   },
   {
@@ -313,7 +314,7 @@
    "id": "be3a4728-67e7-4e28-a2e7-15a9b1646f00",
    "metadata": {},
    "source": [
-    "We used the Harmony tool to perform batch correction on the two samples. First, the filtered samples were concatenated. Harmony applied PCA to embed the transcriptomic expression profiles into a 32-dimensional low-dimensional space, followed by an iterative process to remove dataset-specific batch effects. This ultimately generated batch-corrected embeddings labeled `'X_pca_harmony'`, which represent each cell and serve as the raw cell embeddings for subsequent model input.  \n",
+    "We used the Harmony tool to perform batch correction on the two samples. First, the filtered samples were concatenated. Harmony applied PCA to embed the transcriptomic expression profiles into a 32-dimensional space, followed by an iterative process to remove dataset-specific batch effects. This ultimately generated batch-corrected embeddings labeled `'X_pca_harmony'`, which represents each cell and serves as the raw cell embeddings for subsequent model input.  \n",
     "\n",
     "Alternatively, dimensionality reduction results from other batch correction tools—such as scVI or certain biological large language models—can also be used as raw cell embeddings. The results should be stored in `RNA.obsm` for model access."
    ]
@@ -434,7 +435,7 @@
    "id": "6b94cf1e-bc2a-4249-bdc8-84c8603d15b4",
    "metadata": {},
    "source": [
-    "Now we have raw cell embedding in RNA['X_pca_harmony'], and cell types in RNA['cell_type'] as labels."
+    "Now we have raw cell embeddings in `RNA['X_pca_harmony']`, and cell types in `RNA['cell_type']` as labels."
    ]
   },
   {
@@ -547,7 +548,7 @@
    "source": [
     "We use the preprocessed data from the s1d1 training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and serve as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.\n",
     "\n",
-    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the cell type in either the RNA or ATAC H5AD file. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
+    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
    ]
   },
   {
@@ -2766,7 +2767,6 @@
     "\n",
     "```python\n",
     "import pickle\n",
-    "\n",
     "with open('./data/2_cross_samples/train_out/history.pickle', 'rb') as f:\n",
     "    history = pickle.load(f)\n",
     "```\n",
@@ -2819,12 +2819,12 @@
     "  - **auROC** (Area Under the Receiver Operating Characteristic curve)\n",
     "  - **auPRC** (Area Under the Precision-Recall curve)\n",
     "\n",
-    "- **Cross-Modality Neighborhood Consistency and Cell Label Consistency**:  \n",
+    "- **Biological Consistency**:  \n",
     "  Assessment of cross-modality neighborhood consistency and cell label consistency in the cross-sample scenario using:\n",
-    "  - **Neighbor Score (NS)**: Quantifies the percentage of overlapping neighbors between independently constructed scRNA(`'X_pca or X_pca_harmony'`) and scATAC nearest-neighbor graphs.\n",
+    "  - **Neighbor Score (NS)**: Quantifies the percentage of overlapping neighbors between independently constructed scRNA(`'X_pca' or 'X_pca_harmony'`) and scATAC nearest-neighbor graphs.\n",
     "  - **Label Score (LS)**: For a given nearest-neighbor graph, label score quantifies what percentage of each cell’s neighbors share its same label in a given neighborhood. The provided ground-truth cell type annotations will be used directly as the cell labels for calculating the Label Score (LS).\n",
     "\n",
-    "This combination of quantitative accuracy metrics (auROC/auPRC) and biological fidelity metrics (NS/LS with true labels) provides a comprehensive evaluation of the model's performance on unseen data from a different sample.And these will help validate the model's performance in handling batch effects and maintaining biological consistency when predicting across different samples. The evaluation will be conducted at multiple neighborhood scales (e.g., k=100, 50, 10) to assess consistency across different resolutions."
+    "This combination of quantitative accuracy metrics (auROC/auPRC) and biological fidelity metrics (NS/LS) provides a comprehensive evaluation of the model's performance on unseen data from a different sample. And these will help validate the model's performance in handling batch effects and maintaining biological consistency when predicting across different samples. The evaluation will be conducted at multiple neighborhood scales (e.g., k=100, 50, 10) to assess consistency across different resolutions."
    ]
   },
   {
