--- a/source/Tutorials/3_Cross-species_calc_ISM.ipynb
+++ b/source/Tutorials/3_Cross-species_calc_ISM.ipynb
@@ -5,24 +5,25 @@
    "id": "6e1238fc-aa4c-4fd9-8d42-b48330e51009",
    "metadata": {},
    "source": [
-    "## 3_cross-species  \r",
-    "-  Train, Evaluation, and Calculate ISM\r\n",
-    "\r\n",
-    "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-species data. We train XChrom using samples from one species and evaluate the model on samples from another species, showcasing the model's performance across different biological systems (effectively covering two dimensions: cross-sample and cross-species prediction).\r\n",
-    "\r\n",
-    "We use a publicly available single-cell multiome dataset collected from the motor cortex of human, macaque, marmoset, and mouse. Each species contains multiple samples. In addition to providing raw sequencing data, the authors also offer pre-processed and cell-annotated scRNA data for each sample. We extracted paired data and assigned the annotated cell types to obtain the raw dataset for this study. We then integrated scRNA data from different samples within each species using Harmony, and finally performed cross-species integration based on 1-to-1 orthologous genes. The resulting batch-corrected cell embeddings are stored in `RNA.obsm['X_pca_harmony']`. The processed scRNA and scATAC paired data (after filtering and batch correction) have been uploaded to **Zenodo [link]**. For detailed procedures, please refer to **XChrom_analysis [link]**.\r\n",
-    "\r\n",
-    "- **Data Preprocessing**  \r\n",
-    "As an example, we extract two samples from human and mouse respectively, labeled `m1d1` and `mop3c2`. In this tutorial, we use mouse (`mop3c2`) as the training set and human (`m1d1`) as the test set. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model training, following the same procedure as in the `1_within-sample` tutorial to create model inputs. For the test scATAC data, we use the entire test set for evaluation. For the scRNA data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\r\n",
-    "\r\n",
-    "- **Model Training**  \r\n",
-    "During training, the model takes as input sequences (one-hot encoded, 1 × seq_len) and cell embeddings (a cells × embedding_dimensions array) to predict sequence accessibility across cells. Note that the raw cell embeddings here are derived from batch-corrected scRNA data of both samples.\r\n",
-    "\r\n",
-    "- **Prediction and Evaluation**  \r\n",
-    "After training, we evaluate the model's ability to predict chromatin accessibility in the processed test sample. Evaluation is conducted from two perspectives:\r\n",
-    "  - Using **auROC and auPRC** to assess the accuracy of cross-species predictions.\r\n",
-    "  - Using **neighbor score (NS)** and **label score (LS)** to evaluate cross-modality neighborhood consistency and the consistency of cell labels within local neighborhoods in the cross-species scenario.\r\n",
-    "\r\n",
+    "## **3_cross-species**\n",
+    "\n",
+    "-  Train, Evaluation, and Calculate ISM\n",
+    "\n",
+    "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-species data. We train XChrom using samples from one species and evaluate the model on samples from another species, showcasing the model's performance across different biological systems (effectively covering two dimensions: cross-sample and cross-species prediction).\n",
+    "\n",
+    "We use a publicly available single-cell multiome dataset collected from the motor cortex of human, macaque, marmoset, and mouse. Each species contains multiple samples. In addition to providing raw sequencing data, the authors also offer pre-processed and cell-annotated scRNA data for each sample. We extracted paired data and assigned the annotated cell types to obtain the raw dataset for our study. We then integrated scRNA data from different samples within each species using Harmony, and finally performed cross-species integration based on 1-to-1 orthologous genes. The resulting batch-corrected cell embeddings are stored in `RNA.obsm['X_pca_harmony']`. The processed scRNA and scATAC paired data (after filtering and batch correction) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
+    "\n",
+    "- **Data Preprocessing**  \n",
+    "As an example, we extract two samples from human and mouse respectively, labeled `m1d1` and `mop3c2`. In this tutorial, we use mouse (`mop3c2`) as the training set and human (`m1d1`) as the test set. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model training, following the same procedure as in the `1_within-sample` tutorial to create model inputs. For the test scATAC data, we use the entire test set for evaluation. For the scRNA data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
+    "\n",
+    "- **Model Training**  \n",
+    "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × sequence length) and ② cell embeddings (cell number × embedding dimension matrix). The model is trained to predict sequence accessibility across cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
+    "\n",
+    "- **Prediction and Evaluation**  \n",
+    "Following training, we evaluated the model's capability to predict chromatin accessibility in the preprocessed test sample from two perspectives:\n",
+    "    - **Prediction Accuracy:** Qterisic cun-recll curve (auPRC).\n",
+    "    - **Biological Consistency:** Assessed using the neighbor score (NS) to measure cross-modality neighborhood concordance and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods.\n",
+    "\n",
     "This comprehensive evaluation demonstrates the model's capability to generalize across species boundaries while maintaining biological meaningfulness in its predictions."
    ]
   },
@@ -31,24 +32,21 @@
    "id": "6f7b1655-8d08-4439-adc5-0fd442b5d990",
    "metadata": {},
    "source": [
-    "### 1. Download Data (Human: m1d1, Mouse: mop3c2)\r\n",
-    "\r\n",
-    "- The original data is available at [GEO accession GSE229169](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE229169). We have processed this data by performing batch correction using orthologous genes to generate raw cell embeddings for each sample as model inputs. The data has been filtered (filtering threshold: 0.01) and is available for direct download on **Zenodo**. For this tutorial, we use only the human sample m1d1 and the mouse sample mop3c2 as examples, training XChrom on the mouse data and performing prediction on the human data.\r\n",
-    "- Download the human sample files:\r\n",
-    "  - `m1d1_atac.h5ad` and save to `'./data/3_cross_species/m1d1_atac.h5ad'`\r\n",
-    "  - `m1d1_rna_harmony.h5ad` and save to `'./data/3_cross_species/m1d1_rna_harmony.h5ad'`\r\n",
-    "- Download the mouse sample files:\r\n",
-    "  - `mop3c2_atac.h5ad` and save to `'./data/3_cross_species/mop3c2_atac.h5ad'`\r\n",
-    "  - `mop3c2_rna_harmony.h5ad` and save to `'./data/3_cross_species/mop3c2_rna_harmony.h5ad'`\r\n",
-    "- Download the human genome file from:\r\n",
-    "  [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)\r\n",
-    "  and decompress it.\r\n",
-    "- Download the mouse genome file from:\r\n",
-    "  [https://hgdownload.soe.ucsc.edu/goldenPath/mm10/bigZips/mm10.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/mm10/bigZips/mm10.fa.gz)\r\n",
-    "  and decompress it.\r\n",
-    "- If needed, genomes for other species are also available:\r\n",
-    "  - Macaque (* M. mulatta (rhesus monkey): Mmul_10 (rheMac10)Macaca mulatta*)\r\n",
-    "  - Marmoset (*Cal Callithrix jacchus (white-tufted-ear marmoset): cj1700_1.1 (calJac4)lithrix jacchus*)\r\n",
+    "### 1. Download Data (Human: m1d1, Mouse: mop3c2)\n",
+    "\n",
+    "- The original data is available at [GEO accession GSE229169](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE229169). We have processed this data by performing batch correction using orthologous genes to generate raw cell embeddings for each sample as model inputs. The data has been filtered (filtering threshold: 0.01) and is available for direct download on https://doi.org/10.5281/zenodo.16959682. For this tutorial, we use only the human sample m1d1 and the mouse sample mop3c2 as examples, training XChrom on the mouse data and performing prediction on the human data.\n",
+    "- Download the human sample files:\n",
+    "  - `m1d1_atac.h5ad` and save to `'./data/3_cross_species/m1d1_atac.h5ad'`\n",
+    "  - `m1d1_rna_harmony.h5ad` and save to `'./data/3_cross_species/m1d1_rna_harmony.h5ad'`\n",
+    "- Download the mouse sample files:\n",
+    "  - `mop3c2_atac.h5ad` and save to `'./data/3_cross_species/mop3c2_atac.h5ad'`\n",
+    "  - `mop3c2_rna_harmony.h5ad` and save to `'./data/3_cross_species/mop3c2_rna_harmony.h5ad'`\n",
+    "- Download the human genome file from:\n",
+    "  [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)\n",
+    "  and decompress it.\n",
+    "- Download the mouse genome file from:\n",
+    "  [https://hgdownload.soe.ucsc.edu/goldenPath/mm10/bigZips/mm10.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/mm10/bigZips/mm10.fa.gz)\n",
+    "  and decompress it.\n",
     "- The raw cell embeddings are stored in `RNA.obsm['X_pca_harmony']`, and cell type labels are available in `RNA.obs['cell_type']` for use as ground truth labels."
    ]
   },
@@ -80,7 +78,7 @@
    "id": "808cbce3-95be-40be-a24e-b7d731cc61f1",
    "metadata": {},
    "source": [
-    "Indeed, the data we have uploaded to the **Zenodo link** has already undergone comprehensive filtering and preprocessing. So you can ignore this filter data process actually.\n",
+    "Indeed, the data we have uploaded to the https://doi.org/10.5281/zenodo.16959682 has already undergone comprehensive filtering and preprocessing. So you can ignore this filter data process actually.\n",
     "\n",
     "It is crucial that the `species` parameter correctly corresponds to the species of your input data. This parameter is used to filter out sequences located on chromosomes not belonging to the specified species (e.g., retaining only chr1-22, X, Y for human data, or chr1-19, X, Y for mouse data). \n",
     "\n",
@@ -278,7 +276,7 @@
    "source": [
     "We use the preprocessed data from the mouse (mop3c2) training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and serve as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.\n",
     "\n",
-    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the cell type in either the RNA or ATAC H5AD file. When `print_scores = True` is specified, the computed NS and LS values will be printed during each training epoch. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
+    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file. When `print_scores = True` is specified, the computed NS and LS values will be printed during each training epoch. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
    ]
   },
   {
@@ -2939,7 +2937,6 @@
     "\n",
     "```python\n",
     "import pickle\n",
-    "\n",
     "with open('./data/3_cross_species/train_out/history.pickle', 'rb') as f:\n",
     "    history = pickle.load(f)\n",
     "```\n",
@@ -2994,12 +2991,12 @@
     "    *   **auROC** (Area Under the Receiver Operating Characteristic curve)\n",
     "    *   **auPRC** (Area Under the Precision-Recall curve)\n",
     "\n",
-    "*   **Cross-Modality Neighborhood Consistency and Cell Label Consistency**:\n",
+    "*   **Biological Consistency**:\n",
     "    Assessment of cross-modality neighborhood consistency and cell label consistency in the cross-sample scenario using:\n",
     "    *   **Neighbor Score (NS)**: Quantifies the percentage of overlapping neighbors between independently constructed nearest-neighbor graphs built from scRNA data (`'X_pca'` or `'X_pca_harmony'`) and scATAC data.\n",
     "    *   **Label Score (LS)**: Measures the percentage of a cell's neighbors that share the same cell-type label within a given nearest-neighbor graph. The provided cell type annotations will be used directly as labels for LS calculation.\n",
     "\n",
-    "This combined approach of quantitative accuracy metrics (auROC/auPRC) and biological consistency metrics (NS/LS based on true labels) provides a comprehensive evaluation of the model's predictive performance on data from different species.\n",
+    "This combined approach of quantitative accuracy metrics (auROC/auPRC) and biological consistency metrics (NS/LS) provides a comprehensive evaluation of the model's predictive performance on data from different species.\n",
     "\n",
     "The evaluation will help validate the model's capability to handle batch effects during cross-sample prediction while maintaining biological meaningfulness. Assessment will be conducted at multiple neighborhood scales (e.g., k=100, 50, 10) to examine consistency across different resolutions."
    ]
@@ -3241,9 +3238,9 @@
    "id": "22d4ed98-0b91-45ed-914a-edd40baeffb6",
    "metadata": {},
    "source": [
-    "After obtaining the base-level importance scores for each input sequence, we sought to determine whether specific motifs play key roles in model training and prediction for particular cell types. We scanned these sequences (using the FIMO tool) to identify candidate motifs and then calculated whether the PWM scores of these candidate motifs correlated with the ISM values computed for the region. A correlation value was obtained for each cell, and the final result was derived by averaging these values across all cells of the same cell type. The specific analysis code can be found via **XChrom_analysis**.\r\n",
-    "\r\n",
-    "Here, we only show tge correlation values between the PWM score of motif MEF2C and the ISM values computed for the candidate MEF2C region identified at chr14:73168099-73168956 (in m1d1_peaks.bed) for three cell types: 'L2/3 IT', 'LAMP5', and 'MGC'."
+    "After obtaining the base-level importance scores for each input sequence, we sought to determine whether specific motifs play key roles in model training and prediction for particular cell types. We scanned these sequences (using the FIMO tool) to identify candidate motifs and then calculated whether the PWM scores of these candidate motifs correlated with the ISM values computed for the region. A correlation value was obtained for each cell, and the final result was derived by averaging these values across all cells of the same cell type. The specific analysis code can be found via https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
+    "\n",
+    "Here, we only show correlation values between the PWM score of motif MEF2C and the ISM values computed for the candidate MEF2C region identified at chr14:73168099-73168956 (in m1d1_peaks.bed) for three cell types: 'L2/3 IT', 'LAMP5', and 'MGC'."
    ]
   },
   {
