--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -5,20 +5,21 @@
    "id": "d9db57e0-fb4c-4a93-8795-f2b0dcfefb32",
    "metadata": {},
    "source": [
-    "## 4_covid19_pred  \r",
-    "-  Train, Prediction, and Calculate TF Activity  \r\n",
-    "\r\n",
-    "In this tutorial, we demonstrate how to use publicly available paired scRNA and scATAC data to predict scATAC profiles for unpaired samples that only have scRNA data, and to calculate and analyze transcription factor (TF) activity across different sample conditions in the dataset.\r\n",
-    "\r\n",
-    "We use a publicly available 10x Genomics Multiome dataset from a healthy donor of human peripheral blood mononuclear cells (PBMCs) (PBMC10k) as training data. This model is used to predict scATAC profiles for unpaired scRNA data from COVID-19-infected donor PBIt hasludes annotated cell types and batch information. We first performed batch correction on these samples and the public PBMC data using the Harmony tool, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to **Zenodo [link]**. For detailed procedures, please refer to **XChrom_analysis [link]**.\r\n",
-    "\r\n",
-    "- **Data Preprocessing**  \r\n",
-    "In this tutorial, we use the paired PBMC10k data as the training set to train the model, then predict scATAC profiles for the COVID-19 data. For the training scATAC data, we split it by cells and peaks to genera_vallidation data, following the same procedure as in the `1_within-sample` tutorial to create model inputs. For the scRNA data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\r\n",
-    "\r\n",
-    "- **Model Training**  \r\n",
-    "During training, the model takes as input sequences (one-hot encoded, 1 × seq_len) and cell embeddings (a cells × embedding_dimensions array) to predict sequence accessibility across cells. Note that the raw cell embeddings here are derived from batch-corrected scRNA data of both datasets.\r\n",
-    "\r\n",
-    "- **Model Prediction**  \r\n",
+    "## 4_covid19_pred  \n",
+    "\n",
+    "-  Train, Prediction, and Calculate TF Activity  \n",
+    "\n",
+    "In this tutorial, we demonstrate how to use publicly available paired scRNA and scATAC data to predict scATAC profiles for unpaired samples that only have scRNA data, and to calculate and analyze transcription factor (TF) activity across different sample conditions in the dataset.\n",
+    "\n",
+    "We use a publicly available 10x Genomics Multiome dataset from a healthy donor of human peripheral blood mononuclear cells (PBMCs) (PBMC10k) as training data. This model is used to predict scATAC profiles for unpaired scRNA data from COVID-19-infected donors,it has been annotated cell types and batch information. We first performed batch correction on these samples and the public PBMC data using the Harmony tool, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
+    "\n",
+    "- **Data Preprocessing**  \n",
+    "In this tutorial, we use the paired PBMC10k data as the training set to train the model, then predict scATAC profiles for the COVID-19 data. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within-sample` tutorial. For the scRNA data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
+    "\n",
+    "- **Model Training**  \n",
+    "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × sequence length) and ② cell embeddings (cell number × embedding dimension matrix). The model is trained to predict sequence accessibility across cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
+    "\n",
+    "- **Model Prediction**  \n",
     "After training, we use the COVID-19 `RNA.obsm['X_pca_harmony']` as model input for prediction. Note: Since the COVID-19 data lacks paired scATAC measurements, we can only predict the accessibility of the training set sequences in each COVID-19 cell."
    ]
   },
@@ -27,32 +28,32 @@
    "id": "2621fe84-2458-4a76-a8ad-72ba7dda0e52",
    "metadata": {},
    "source": [
-    "### 1. Download Data (PBMC10k, COVID-19)\r\n",
-    "\r\n",
-    "-   The original PBMC10k data is available at:  \r\n",
-    "    [https://cf.10xgenomics.com/samples/cell-arc/2.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k_filtered_feature_bc_matrix.h5](https://cf.10xgenomics.com/samples/cell-arc/2.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k_filtered_feature_bc_matrix.h5)  \r\n",
-    "    The original COVID-19 data is available at:  \r\n",
-    "    [https://nubes.helmholtz-berlin.de/s/wqg6tmX4fW7pci5/download](https://nubes.helmholtz-berlin.de/s/wqg6tmX4fW7pci5/download)  \r\n",
-    "    We have preprocessed this data, which included filtering the paired PBMC10k data and extracting only the scRNA data from mild and severe donor samples in the COVID-19 dataset for analysis. Batch correction was also applied. The preprocessed data can be downloaded from the **Zenodo [link]**.\r\n",
-    "\r\n",
-    "-   Download the PBMC10k data and save it as:  \r\n",
-    "    `'./data/4_pred_newCondition/pbmc10k_atac.h5ad'`  \r\n",
-    "    `'./data/4_pred_newCondition/pbmc10k_rna_harmony.h5ad'`  \r\n",
-    "    (These files will be used for model training)\r\n",
-    "\r\n",
-    "-   Download the COVID-19 data and save it as:  \r\n",
-    "    `'./data/4_pred_newCondition/covid_rna_harmony.h5ad'`  \r\n",
-    "    (This file provides the model input for analysis)\r\n",
-    "\r\n",
-    "-   Download the motif database file from:  \r\n",
-    "    [https://meme-suite.org/meme/meme-software/Databases/motifs/motif_databases.12.27.tgz](https://meme-suite.org/meme/meme-software/Databases/motifs/motif_databases.12.27.tgz)  \r\n",
-    "    After decompression, select the file `motif_databases/CIS-BP_2.00/Homo_sapiens.meme` and save it to:  \r\n",
-    "    `'./data/4_pred_newCondition/Homo_sapiens.meme'`\r\n",
-    "\r\n",
-    "-   Download the human genome file from:  \r\n",
-    "    [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)  \r\n",
-    "    and decompress it.\r\n",
-    "\r\n",
+    "### 1. Download Data (PBMC10k, COVID-19)\n",
+    "\n",
+    "-   The original PBMC10k data is available at:  \n",
+    "    [https://cf.10xgenomics.com/samples/cell-arc/2.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k_filtered_feature_bc_matrix.h5](https://cf.10xgenomics.com/samples/cell-arc/2.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k_filtered_feature_bc_matrix.h5)  \n",
+    "    The original COVID-19 data is available at:  \n",
+    "    [https://nubes.helmholtz-berlin.de/s/wqg6tmX4fW7pci5/download](https://nubes.helmholtz-berlin.de/s/wqg6tmX4fW7pci5/download)  \n",
+    "    We have preprocessed this data, which included filtering the paired PBMC10k data and extracting only the scRNA data from mild and severe donor samples in the COVID-19 dataset for analysis. Batch correction was also applied. The preprocessed data can be downloaded from the https://doi.org/10.5281/zenodo.16959682.\n",
+    "\n",
+    "-   Download the PBMC10k data and save it as:  \n",
+    "    `'./data/4_pred_newCondition/pbmc10k_atac.h5ad'`  \n",
+    "    `'./data/4_pred_newCondition/pbmc10k_rna_harmony.h5ad'`  \n",
+    "    (These files will be used for model training)\n",
+    "\n",
+    "-   Download the COVID-19 data and save it as:  \n",
+    "    `'./data/4_pred_newCondition/covid_rna_harmony.h5ad'`  \n",
+    "    (This file provides the model input for analysis)\n",
+    "\n",
+    "-   Download the motif database file from:  \n",
+    "    [https://meme-suite.org/meme/meme-software/Databases/motifs/motif_databases.12.27.tgz](https://meme-suite.org/meme/meme-software/Databases/motifs/motif_databases.12.27.tgz)  \n",
+    "    After decompression, select the file `motif_databases/CIS-BP_2.00/Homo_sapiens.meme` and save it to:  \n",
+    "    `'./data/4_pred_newCondition/Homo_sapiens.meme'`\n",
+    "\n",
+    "-   Download the human genome file from:  \n",
+    "    [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)  \n",
+    "    and decompress it.\n",
+    "\n",
     "-   The raw batch-corrected cell embeddings are stored in `RNA.obsm['X_pca_harmony']`, and cell type labels are available in `RNA.obs['celltypeL0']`."
    ]
   },
@@ -131,7 +132,7 @@
     "- `m_trainval.npz`: corresponding count matrix\n",
     "- `trainval_seqs.h5`: base sequence file for training peaks                 \n",
     "\n",
-    "All files were saved in `'./data/3_cross_species/train_data/'`.\n",
+    "All files were saved in `'./data/4_pred_newCondition/train_data/'`.\n",
     "\n",
     "Note: The `input_fasta` parameter should be replaced with the path to the genome file corresponding to the species used in your specific dataset."
    ]
@@ -151,7 +152,7 @@
    "source": [
     "We use the preprocessed data from the PBMC10k training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and serve as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.\n",
     "\n",
-    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the cell type in either the RNA or ATAC H5AD file. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
+    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
    ]
   },
   {
@@ -1949,11 +1950,10 @@
    "source": [
     "Plotting training metrics helps monitor overfitting and evaluate the final model performance. Ideally, after a certain number of epochs, the metric curves should stabilize and remain steady.\n",
     "\n",
-    "The metrics computed during training are saved in `./data/3_cross_species/train_out/history.pickle`. They can be loaded using the following code:\n",
+    "The metrics computed during training are saved in `./data/4_pred_newCondition/train_out/history.pickle`. They can be loaded using the following code:\n",
     "\n",
     "```python\n",
     "import pickle\n",
-    "\n",
     "with open('./data/4_pred_newCondition/train_out/history.pickle', 'rb') as f:\n",
     "    history = pickle.load(f)\n",
     "```\n",
@@ -1994,8 +1994,11 @@
    "metadata": {},
    "source": [
     "### 4. calculate TF activity\n",
-    "We performed motif insertion on trained XChrom to compute a TF activity score for each TF for each cell. Specifically, we first generated 1,000 genomic background sequences by performing dinucleotide shuffling of 1,000 randomly sampled peaks from the training sequences atlas using `fasta ushuffle`. For each TF in the motif database, we sampled a motif sequence from the PWM and inserted it into the center of each of the genomic background sequences. We ran forward passes through the model for both the motif-inserted sequences and background sequences to predict normalized accessibility across all cells,make difference as the motif influence for each sequence. We averaged this influence score across all 1,000 sequences for each cell to generate a cell-level prediction of raw TF activity. \n",
-    "- for this，you must install fasta_ushuffle first with: `conda install bioconda::fasta_ushuffle`, and download motif file in .meme format."
+    "We performed motif insertion on trained XChrom to compute a TF activity score for each TF for each cell. \n",
+    "\n",
+    "Specifically, we first generate 1,000 genomic background sequences by performing dinucleotide shuffling of 1,000 randomly sampled peaks from the training sequences atlas using `fasta ushuffle`. For each TF in the motif database, we sampled a motif sequence from the PWM and inserted it into the center of each of the genomic background sequences. We ran forward passes through the model for both the motif-inserted sequences and background sequences to predict accessibility across all cells, making difference as the motif influence for each sequence. We average this influence score across all 1,000 sequences for each cell to generate a cell-level prediction of raw TF activity. \n",
+    "\n",
+    "- for this，you must install fasta_ushuffle first with: `conda install bioconda::fasta_ushuffle`"
    ]
   },
   {
